# malaria_interface

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: create_api.py  main.py  pyproject.toml  requirements.txt
frontend/: .env.production  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: DetectionInfoPopover.tsx  DetectionResults.tsx  Footer.tsx  Header.tsx  ModelSteps.tsx  Navbar.tsx  UploadSection.tsx
frontend/src/components/ui/: Card.tsx
frontend/src/pages/: Home.tsx  ModelInfo.tsx
frontend/src/services/: api.ts
malaria_deployment/: main.py
malaria_deployment/static/: styles.css
malaria_deployment/static/images/: malaria_starter.jfif
malaria_deployment/templates/: index.html
static/: styles.css
templates/: index.html  model-info.html
