[project]
name = "malaria-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "docker>=7.1.0",
    "fastapi>=0.115.4",
    "pillow>=11.0.0",
    "torch>=2.5.1",
    "ultralytics>=8.3.28",
    "uvicorn>=0.32.0",
]
